trying to fix about page on mobile

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -55,6 +55,7 @@ $on-laptop:        800px !default;
 }
 /* Image styles */
 .bio-image {
+  text-decoration-color: #ffffff;
   width: 120px;        /* Default image size */
   height: 120px;       /* Default image size */
   border-radius: 50%;  /* Circular image */
